--- a/index.html
+++ b/index.html
@@ -1,17 +1,54 @@
 <html>
   <header>
     <style>
-       #header {
-        text-align: center;
+
+#header{
+  text-align: center;
+}
+
+      };
+      body {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        flex-wrap: wrap;
       };
 
-      #first-container  {
+      #lists{
         display: flex;
-        border: bold 3px black;
-        height: 30px;
-        width: 30px;
-        background-color: aqua;
+        width: 100%;
+      }
+      #first-container {
+        width: calc(100%/3 - 2rem);
+        margin: 2rem;
+        border: solid 2px black;
+        display: flex;
+        flex-direction: column;
+        padding: 1rem;
+      }
+      #second-container {
+        width: calc(100%/3 - 2rem);
+        margin: 2rem;
+        border: solid 2px black;
+        display: flex;
+        flex-direction: column;
+        padding: 1rem;
+      }
+      #third-container {
+        width: calc(100%/3 - 2rem);
+        margin: 2rem;
+        border: solid 2px black;
+        display: flex;
+        flex-direction: column;
+        padding: 1rem;
+      }
 
+      button {
+        height: 3rem;
+        background-color: red;
+      }
+      .disabled {
+        background-color: white;
       }
 
 
@@ -19,24 +56,24 @@
   </header>
   <body>
     <h1 id = 'header'> Acme First, Second, Third</h1>
-    <div id= 'lists'>
+<div id= 'lists'>
       <div id = 'first-container'>
-        <button><</button>
+        <button class = "disabled" disabled><</button>
         <button>></button>
-        <h1>first</h1>
-      </div>
+        <h2>FIRST</h2>
+       </div>
     <div id = 'second-container'>
         <button><</button>
         <button>></button>
-      <h1>Second</h1>
+      <h2>SECOND</h2>
     </div>
-    <div id = 'third-container'>
+       <div id = 'third-container'>
         <button><</button>
-        <button>></button>
-      <h1>Third</h1>
-    </div>
-    </div>
-    <script>
+        <button class = "disabled" disabled>></button>
+        <h2>THIRD</h2>
+       </div>
+</div>
+<script>
     const slots = ['first', 'second', 'third'];
 
     const users = [
