--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
 
 #header{
   text-align: center;
-}
+};
 
-      };
       body {
         display: flex;
         flex-direction: column;
@@ -25,6 +24,7 @@
         display: flex;
         flex-direction: column;
         padding: 1rem;
+
       }
       #second-container {
         width: calc(100%/3 - 2rem);
@@ -33,6 +33,7 @@
         display: flex;
         flex-direction: column;
         padding: 1rem;
+
       }
       #third-container {
         width: calc(100%/3 - 2rem);
@@ -41,6 +42,7 @@
         display: flex;
         flex-direction: column;
         padding: 1rem;
+
       }
 
       button {
@@ -61,16 +63,26 @@
         <button class = "disabled" disabled><</button>
         <button>></button>
         <h2>FIRST</h2>
+        <ul>
+          <li data id = "1"> Moe </li>
+        </ul>
        </div>
     <div id = 'second-container'>
         <button><</button>
         <button>></button>
       <h2>SECOND</h2>
+      <ul>
+        <li data id = "2"> Larry </li>
+      </ul>
     </div>
        <div id = 'third-container'>
         <button><</button>
         <button class = "disabled" disabled>></button>
         <h2>THIRD</h2>
+        <ul>
+          <li data id = "3"> Curly </li>
+          <li data id = "4"> Lucy </li>
+        </ul>
        </div>
 </div>
 <script>
