--- a/index.html
+++ b/index.html
@@ -1,22 +1,27 @@
 <html>
   <header>
     <style>
+/* need flex boxes to be on one row, currently not flex-wrapping
+figured this one out... it was a ; that was causing this*/
 
-#header{
-  text-align: center;
-};
+
+
+      #header{
+        text-align: center;
+      }
 
       body {
         display: flex;
         flex-direction: column;
         align-items: center;
         flex-wrap: wrap;
-      };
+      }
 
-      #lists{
+      #lists {
         display: flex;
         width: 100%;
       }
+
       #first-container {
         width: calc(100%/3 - 2rem);
         margin: 2rem;
@@ -24,8 +29,8 @@
         display: flex;
         flex-direction: column;
         padding: 1rem;
-
       }
+
       #second-container {
         width: calc(100%/3 - 2rem);
         margin: 2rem;
@@ -33,8 +38,8 @@
         display: flex;
         flex-direction: column;
         padding: 1rem;
-
       }
+
       #third-container {
         width: calc(100%/3 - 2rem);
         margin: 2rem;
@@ -42,13 +47,13 @@
         display: flex;
         flex-direction: column;
         padding: 1rem;
-
       }
 
       button {
         height: 3rem;
         background-color: red;
       }
+
       .disabled {
         background-color: white;
       }
@@ -94,6 +99,10 @@
       {id: 3, name: 'curly', slot: 'third'},
       {id: 4, name: 'lucy', slot: 'third', selected: true},
     ];
+
+    /* need eventlisteners
+    when "<" button is clicked, move selected li left
+    when ">" button is clicked, move seleced li right */
 
     </script>
 
