--- a/index.html
+++ b/index.html
@@ -113,9 +113,14 @@ figured this one out... it was a ; that was causing this*/
 
 
     document.getElementsByClassName("left").addEventListener("click", moveLeft);
+    function moveLeft(){
+      //if selected person has slot of third, move to second, if already second move to first
+    }
 
     document.getElementsByClassName("right").addEventListener("click", moveRight);
-
+function moveRight(){
+  //if selected person has a slot of first, move to second, if already second, move to third
+}
     </script>
 
 
