--- a/index.html
+++ b/index.html
@@ -109,7 +109,10 @@ figured this one out... it was a ; that was causing this*/
     when "<" button is clicked, move selected li left
     when ">" button is clicked, move seleced li right */
 
-
+document.getElementsByClassName("names").addEventListener("click", colorIt);
+function colorIt(){
+  //need this to color the background of an li when selected
+}
 
 
     document.getElementsByClassName("left").addEventListener("click", moveLeft);
