--- a/index.html
+++ b/index.html
@@ -2,9 +2,6 @@
   <header>
     <style>
 
-/* need flex boxes to be on one row, currently not flex-wrapping
-figured this one out... it was a ; that was causing this*/
-
       #header{
         text-align: center;
       }
@@ -61,10 +58,9 @@ figured this one out... it was a ; that was causing this*/
       .disabled {
         background-color: white;
       }
-
-
       </style>
   </header>
+
   <body>
     <h1 id = 'header'> Acme First, Second, Third</h1>
 <div id= 'lists'>
@@ -73,7 +69,7 @@ figured this one out... it was a ; that was causing this*/
         <button class = "right">></button>
         <h2>FIRST</h2>
         <ul>
-          <li data id = "1"> Moe </li>
+          <li class = 'names'> Moe </li>
         </ul>
        </div>
     <div id = 'second-container'>
@@ -81,7 +77,7 @@ figured this one out... it was a ; that was causing this*/
         <button class = "right">></button>
       <h2>SECOND</h2>
       <ul>
-        <li data id = "2"> Larry </li>
+        <li class = 'names'> Larry </li>
       </ul>
     </div>
        <div id = 'third-container'>
@@ -89,8 +85,8 @@ figured this one out... it was a ; that was causing this*/
         <button class = "disabled" disabled>></button>
         <h2>THIRD</h2>
         <ul>
-          <li data id = "3"> Curly </li>
-          <li data id = "4"> Lucy </li>
+          <li class = 'names'> Curly </li>
+          <li class = 'names'> Lucy </li>
         </ul>
        </div>
 </div>
@@ -103,32 +99,37 @@ figured this one out... it was a ; that was causing this*/
       {id: 3, name: 'curly', slot: 'third'},
       {id: 4, name: 'lucy', slot: 'third', selected: true},
     ];
+
 /* need to make names selectable */
+
+const names = document.querySelectorAll('.names');
+
+[...names].map((name, idx) => {
+    name.addEventListener("click", (ev) => {
+        const person = ev.target
+        if(person.style.backgroundColor === "red"){
+            person.style.backgroundColor = "none"
+        }else{
+            person.style.backgroundColor = "red"
+        }
+    }
+    )})
+
+  //need this to color the background of an li when selected
 
     /* need eventlisteners
     when "<" button is clicked, move selected li left
     when ">" button is clicked, move seleced li right */
 
-document.getElementsByClassName("names").addEventListener("click", colorIt);
-function colorIt(){
-  //need this to color the background of an li when selected
-}
+//     document.getElementsByClassName("left").addEventListener("click", moveLeft);
+//     function moveLeft(){
+//       //if selected person has slot of third, move to second, if already second move to first
+//     }
 
-
-    document.getElementsByClassName("left").addEventListener("click", moveLeft);
-    function moveLeft(){
-      //if selected person has slot of third, move to second, if already second move to first
-    }
-
-    document.getElementsByClassName("right").addEventListener("click", moveRight);
-function moveRight(){
-  //if selected person has a slot of first, move to second, if already second, move to third
-}
+//     document.getElementsByClassName("right").addEventListener("click", moveRight);
+// function moveRight(){
+//   //if selected person has a slot of first, move to second, if already second, move to third
+// }
     </script>
-
-
-
-
-
   </body>
-</html>
+  </html>
