made names unselectable

--- a/index.html
+++ b/index.html
@@ -108,14 +108,14 @@ const names = document.querySelectorAll('.names');
     name.addEventListener("click", (ev) => {
         const person = ev.target
         if(person.style.backgroundColor === "red"){
-            person.style.backgroundColor = "none"
+            person.style.backgroundColor = "transparent"
         }else{
             person.style.backgroundColor = "red"
         }
     }
-    )})
+    )});
 
-  //need this to color the background of an li when selected
+
 
     /* need eventlisteners
     when "<" button is clicked, move selected li left
