red was a bit too gnarly

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
       button {
         height: 3rem;
-        background-color: red;
+        background-color: tomato;
       }
 
       .disabled {
